--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio de [Votre Nom]</title>
+    <title>Portfolio de Killian GOILARD</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1>Bienvenue sur mon portfolio</h1>
+        <h1>Bienvenue sur le portfolio de Killian GOILARD</h1>
+        <p>En persévérant on arrive à tout</p>
         <nav>
             <ul>
                 <li><a href="index.html">Accueil</a></li>
@@ -21,11 +22,11 @@
     <main>
         <section>
             <h2>Présentation</h2>
-            <p>Bienvenue sur mon portfolio professionnel. Je suis [Votre Nom], un(e) [Votre Profession].</p>
+            <p>Je suis Killian GOILARD, un passionné de nouvelles technologies et de communication. Actuellement en fin de première année de BTS Communication, je suis en alternance au sein du groupement de gendarmerie de la Mayenne à Laval.</p>
         </section>
     </main>
     <footer>
-        <p>&copy; 2024 [Votre Nom]</p>
+        <p>&copy; 2024 Killian GOILARD</p>
     </footer>
 </body>
 </html>
