--- a/about.html
+++ b/about.html
@@ -1,1 +1,47 @@
-
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>À propos de Killian GOILARD</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <header>
+        <h1>À propos de moi</h1>
+        <nav>
+            <ul>
+                <li><a href="index.html">Accueil</a></li>
+                <li><a href="about.html">À propos</a></li>
+                <li><a href="projects.html">Projets</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <section>
+            <h2>Parcours professionnel</h2>
+            <p>Je m'appelle Killian GOILARD et je suis né le 15 novembre 2001 à Saint Herblain, Loire-Atlantique. Actuellement en BTS Communication, je suis en alternance au sein du groupement de gendarmerie de la Mayenne à Laval.</p>
+            <p>Mon parcours professionnel a débuté avec un baccalauréat Economique et Social, mention bien. J'ai ensuite entrepris deux années de Licence en psychologie avant de réaliser un service civique à l'agence Pôle emploi de Pornic. J'ai également travaillé pour la mairie de Pornic, où j'ai développé des compétences en organisation d'événements et gestion de matériel.</p>
+            <p>Actuellement, je poursuis mon alternance en communication, avec une ambition de poursuivre un Bachelor en Communication et Stratégie digitale, et de me spécialiser dans les nouvelles réalités comme l'intelligence artificielle, le Web3 et la réalité mixte. Mon objectif est de créer une agence de communication événementielle innovante.</p>
+        </section>
+        <section>
+            <h2>Compétences</h2>
+            <ul>
+                <li>Communication digitale</li>
+                <li>Organisation d'événements</li>
+                <li>Réalité mixte et technologies émergentes</li>
+                <li>Création de contenus</li>
+                <li>Animation de webinaires</li>
+            </ul>
+        </section>
+        <section>
+            <h2>Passions et intérêts</h2>
+            <p>Je suis passionné par les nouvelles technologies, notamment l'intelligence artificielle et la réalité mixte. J'aime aussi découvrir de nouvelles méthodes et stratégies de communication pour rester à la pointe des innovations technologiques.</p>
+        </section>
+    </main>
+    <footer>
+        <p>&copy; 2024 Killian GOILARD</p>
+    </footer>
+</body>
+</html>
