--- a/projects.html
+++ b/projects.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projets de Killian GOILARD</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -22,16 +23,12 @@
         <section>
             <h2>Projets significatifs</h2>
             <article>
-                <h3>Service civique à l'agence Pôle emploi de Pornic</h3>
-                <p>Durant mon service civique, j'ai réalisé des affiches pour la communication interne et aidé à la mise en place de salons de l'emploi. J'ai également co-animé un webinaire avec la personne chargée du digital à l'agence.</p>
+                <h3>Animation du webinaire Pôle emploi</h3>
+                <p>Mon premier projet vraiment intéressant a été l'animation d'un webinaire autour des outils mis en place par Pôle emploi. Cela a demandé une recherche préalable des outils et une animation fluide en direct auprès de centaines de personnes.</p>
             </article>
             <article>
-                <h3>Saison à la mairie de Pornic</h3>
-                <p>En travaillant au service culture, j'ai contribué à l'organisation de concerts et événements estivaux, développant des compétences en mise en place de matériel son et lumière.</p>
-            </article>
-            <article>
-                <h3>Alternance en communication</h3>
-                <p>Actuellement, je suis en alternance au sein du groupement de gendarmerie de la Mayenne à Laval, où je suis adjoint à la communication. Cela me permet de mettre en pratique mes compétences en communication dans un cadre professionnel.</p>
+                <h3>Visite virtuelle du groupement de gendarmerie de la Mayenne</h3>
+                <p>Un projet notable où j'ai développé mes compétences sur le logiciel 3D Vista ainsi que la modélisation 3D de matériels de la gendarmerie. J'ai aussi utilisé GitHub et ChatGPT pour intégrer la visite virtuelle, téléchargée localement sur mon ordinateur.</p>
             </article>
         </section>
     </main>
