--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,13 @@
             <ul>
                 <li><a href="index.html">Accueil</a></li>
                 <li><a href="about.html">À propos</a></li>
-                <li><a href="projects.html">Projets</a></li>
+                <li>
+                    <a href="projects.html">Projets</a>
+                    <ul>
+                        <li><a href="project1.html">Animation du webinaire Pôle emploi</a></li>
+                        <li><a href="project2.html">Visite virtuelle du groupement de gendarmerie</a></li>
+                    </ul>
+                </li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
