--- a/index.html
+++ b/index.html
@@ -9,19 +9,14 @@
 </head>
 <body>
     <header>
+        <img src="Egide.png" alt="Logo" class="logo">
         <h1>Bienvenue sur le portfolio de Killian GOILARD</h1>
         <p>En persévérant on arrive à tout</p>
         <nav>
             <ul>
                 <li><a href="index.html">Accueil</a></li>
                 <li><a href="about.html">À propos</a></li>
-                <li>
-                    <a href="projects.html">Projets</a>
-                    <ul>
-                        <li><a href="project1.html">Animation du webinaire Pôle emploi</a></li>
-                        <li><a href="project2.html">Visite virtuelle du groupement de gendarmerie</a></li>
-                    </ul>
-                </li>
+                <li><a href="projects.html">Projets</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
