--- a/projects.html
+++ b/projects.html
@@ -9,18 +9,13 @@
 </head>
 <body>
     <header>
+        <img src="Egide.png" alt="Logo" class="logo">
         <h1>Mes Projets</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Accueil</a></li>
                 <li><a href="about.html">À propos</a></li>
-                <li>
-                    <a href="projects.html">Projets</a>
-                    <ul>
-                        <li><a href="project1.html">Animation du webinaire Pôle emploi</a></li>
-                        <li><a href="project2.html">Visite virtuelle du groupement de gendarmerie</a></li>
-                    </ul>
-                </li>
+                <li><a href="projects.html">Projets</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
@@ -35,6 +30,11 @@
             <article>
                 <h3>Visite virtuelle du groupement de gendarmerie de la Mayenne</h3>
                 <p>Un projet notable où j'ai développé mes compétences sur le logiciel 3D Vista ainsi que la modélisation 3D de matériels de la gendarmerie. J'ai aussi utilisé GitHub et ChatGPT pour intégrer la visite virtuelle, téléchargée localement sur mon ordinateur.</p>
+            </article>
+            <article>
+                <h3>Logo “L’Égide”</h3>
+                <a href="logo_project.html"><img src="Egide.png" alt="Logo Egide" style="width: 100px; height: auto;"></a>
+                <p>Ce logo a été créé en cours pour nous représenter. Cliquez sur le logo pour en savoir
             </article>
         </section>
     </main>
