--- a/contact.html
+++ b/contact.html
@@ -14,18 +14,13 @@
 </head>
 <body>
     <header>
+        <img src="Egide.png" alt="Logo" class="logo">
         <h1>Contact</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Accueil</a></li>
                 <li><a href="about.html">À propos</a></li>
-                <li>
-                    <a href="projects.html">Projets</a>
-                    <ul>
-                        <li><a href="project1.html">Animation du webinaire Pôle emploi</a></li>
-                        <li><a href="project2.html">Visite virtuelle du groupement de gendarmerie</a></li>
-                    </ul>
-                </li>
+                <li><a href="projects.html">Projets</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
