--- a/projects.html
+++ b/projects.html
@@ -34,7 +34,7 @@
             <article>
                 <h3>Logo “L’Égide”</h3>
                 <a href="logo_project.html"><img src="Egide.png" alt="Logo Egide" style="width: 100px; height: auto;"></a>
-                <p>Ce logo a été créé en cours pour nous représenter. Cliquez sur le logo pour en savoir plus.
+                <p>Ce logo a été créé en cours pour nous représenter. Cliquez sur le logo pour en savoir plus.</p>
             </article>
         </section>
     </main>
