--- a/about.html
+++ b/about.html
@@ -9,7 +9,8 @@
 </head>
 <body>
     <header>
-        <h1>À propos de moi</h1>
+        <img src="Egide.png" alt="Logo" class="logo">
+        <h1>À propos</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Accueil</a></li>
@@ -21,24 +22,17 @@
     </header>
     <main>
         <section>
-            <h2>Parcours professionnel</h2>
-            <p>Je m'appelle Killian GOILARD et je suis né le 15 novembre 2001 à Saint Herblain, Loire-Atlantique. Actuellement en BTS Communication, je suis en alternance au sein du groupement de gendarmerie de la Mayenne à Laval.</p>
-            <p>Mon parcours professionnel a débuté avec un baccalauréat Economique et Social, mention bien. J'ai ensuite entrepris deux années de Licence en psychologie avant de réaliser un service civique à l'agence Pôle emploi de Pornic. J'ai également travaillé pour la mairie de Pornic, où j'ai développé des compétences en organisation d'événements et gestion de matériel.</p>
-            <p>Actuellement, je poursuis mon alternance en communication, avec une ambition de poursuivre un Bachelor en Communication et Stratégie digitale, et de me spécialiser dans les nouvelles réalités comme l'intelligence artificielle, le Web3 et la réalité mixte. Mon objectif est de créer une agence de communication événementielle innovante.</p>
+            <h2>Présentation</h2>
+            <p>Je suis Killian GOILARD, né le 15 novembre 2001 en Loire-Atlantique à Saint Herblain. Actuellement en fin de première année de BTS Communication (je passe en deuxième année) et en alternance au sein du groupement de gendarmerie de la Mayenne à Laval pour toute la durée de mon BTS.</p>
         </section>
         <section>
-            <h2>Compétences</h2>
-            <ul>
-                <li>Communication digitale</li>
-                <li>Organisation d'événements</li>
-                <li>Réalité mixte et technologies émergentes</li>
-                <li>Création de contenus</li>
-                <li>Animation de webinaires</li>
-            </ul>
+            <h2>Mes intérêts et passions</h2>
+            <p>Je suis une personne très sérieuse qui adore découvrir de nouvelles choses notamment dans le domaine des nouvelles technologies comme l'intelligence artificielle ou la réalité mixte. J'ai longtemps voulu devenir militaire ou plus précisément gendarme (ma soeur est gendarme) cependant un Keratocone à l'oeil droit m'en empêche et j'ai donc dû trouver un autre domaine. C'est ainsi que je suis rentré en BTS Communication afin d'ensuite faire un Bachelor en Communication et Stratégie digital avec une spécialisation en Communication et nouvelles réalités : proposer des plans d’actions de communication à la pointe des technologies (intelligence artificielle, Web3 et réalité mixte).</p>
+            <p>Mon but serait d'ouvrir une agence de communication événementielle permettant de créer des événements comme des mariages, séminaires et autres, mais les clients pourraient prévisualiser leurs produits (salle ou autres) en réalité augmentée grâce à un casque VR. Ma phrase serait : "En persévérant on arrive à tout".</p>
         </section>
         <section>
-            <h2>Passions et intérêts</h2>
-            <p>Je suis passionné par les nouvelles technologies, notamment l'intelligence artificielle et la réalité mixte. J'aime aussi découvrir de nouvelles méthodes et stratégies de communication pour rester à la pointe des innovations technologiques.</p>
+            <h2>Parcours académique</h2>
+            <p>J'ai effectué un baccalauréat Économique et social option mathématique obtenu avec la mention bien. J'ai ensuite fait 2 années de Licence de psychologie que j'ai arrêtées car je me faisais des idées sur mon projet qui, après renseignement, n'était pas ce que je voulais. J'ai donc effectué un service civique de 8 mois (01/11/2022 à 26/06/2023) au sein de l'agence Pôle Emploi de Pornic (44210) dans laquelle j'ai rencontré des gens exceptionnels qui m'ont permis de trouver ma voie et de gagner en compétences par la réalisation d'affiches pour de la communication interne et l'aide à la mise en place de salons de l'emploi. J'ai aussi co-animé un webinaire avec la personne chargée du digital à l'agence de Pornic. J'ai par la suite fait une saison au sein de la mairie de Pornic, plus précisément au service culture qui s'occupe de l'organisation et de la mise en place de gros concerts pendant l'été, ce qui m'a permis de rencontrer quelques artistes comme Ben l'Oncle Soul ou Elephantz ainsi que développer des compétences dans la mise en place de matériels son et lumière. Depuis fin août, je suis en alternance en communication initialement chez le groupe Gendry à Craon puis arrivé début novembre à la gendarmerie en tant qu'adjoint à la communication en alternance et en même temps en formation au sein de l'ESPL d'Angers.</p>
         </section>
     </main>
     <footer>
