--- a/logo_project.html
+++ b/logo_project.html
@@ -2,8 +2,8 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0
-    <title>Logo “L’Égide”</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Logo “L’Égide"</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
@@ -34,4 +34,6 @@
     </footer>
 </body>
 </html>
+```
+
 ```
