--- a/about.html
+++ b/about.html
@@ -23,16 +23,59 @@
     <main>
         <section>
             <h2>Présentation</h2>
-            <p>Je suis Killian GOILARD, né le 15 novembre 2001 en Loire-Atlantique à Saint Herblain. Actuellement en fin de première année de BTS Communication (je passe en deuxième année) et en alternance au sein du groupement de gendarmerie de la Mayenne à Laval pour toute la durée de mon BTS.</p>
+            <p>Je suis Killian GOILARD, né le 15 novembre 2001 en Loire-Atlantique à Saint Herblain. Actuellement en fin de première année de BTS Communication (je passe en deuxième année) et en alternance au sein du groupement de gendarmerie de la Mayenne à Laval pour toute la durée de mon BTS. Je cherche à changer d'alternance pour ma deuxième année de BTS communication dans une entreprise où je pourrai acquérir plus de compétences dans le domaine de la communication, et pourquoi pas dans le domaine de l'intelligence artificielle, de la réalité mixte ou autres.</p>
         </section>
         <section>
             <h2>Mes intérêts et passions</h2>
-            <p>Je suis une personne très sérieuse qui adore découvrir de nouvelles choses notamment dans le domaine des nouvelles technologies comme l'intelligence artificielle ou la réalité mixte. J'ai longtemps voulu devenir militaire ou plus précisément gendarme (ma soeur est gendarme) cependant un Keratocone à l'oeil droit m'en empêche et j'ai donc dû trouver un autre domaine. C'est ainsi que je suis rentré en BTS Communication afin d'ensuite faire un Bachelor en Communication et Stratégie digital avec une spécialisation en Communication et nouvelles réalités : proposer des plans d’actions de communication à la pointe des technologies (intelligence artificielle, Web3 et réalité mixte).</p>
-            <p>Mon but serait d'ouvrir une agence de communication événementielle permettant de créer des événements comme des mariages, séminaires et autres, mais les clients pourraient prévisualiser leurs produits (salle ou autres) en réalité augmentée grâce à un casque VR. Ma phrase serait : "En persévérant on arrive à tout".</p>
+            <p>Je suis une personne très sérieuse qui adore découvrir de nouvelles choses notamment dans le domaine des nouvelles technologies comme l'intelligence artificielle ou la réalité mixte. J'ai longtemps voulu devenir militaire ou plus précisément gendarme (ma soeur est gendarme) cependant un Keratocone à l'oeil droit m'en empêche et j'ai donc dû trouver un autre domaine. C'est ainsi que je suis rentré en BTS Communication afin d'ensuite faire un Bachelor en Communication et Stratégie digital avec une spécialisation en Communication et nouvelles réalités, pour proposer des plans d’actions de communication à la pointe des technologies (intelligence artificielle, Web3.0 et réalité mixte).</p>
+            <p>Mon but serait d'ouvrir une agence de communication événementielle permettant de créer des événements comme des mariages, séminaires et autres, mais les clients pourraient prévisualiser leurs produits (salle ou autres) en réalité augmentée grâce à un casque VR. En persévérant, on arrive à tout.</p>
         </section>
         <section>
             <h2>Parcours académique</h2>
-            <p>J'ai effectué un baccalauréat Économique et social option mathématique obtenu avec la mention bien. J'ai ensuite fait 2 années de Licence de psychologie que j'ai arrêtées car je me faisais des idées sur mon projet qui, après renseignement, n'était pas ce que je voulais. J'ai donc effectué un service civique de 8 mois (01/11/2022 à 26/06/2023) au sein de l'agence Pôle Emploi de Pornic (44210) dans laquelle j'ai rencontré des gens exceptionnels qui m'ont permis de trouver ma voie et de gagner en compétences par la réalisation d'affiches pour de la communication interne et l'aide à la mise en place de salons de l'emploi. J'ai aussi co-animé un webinaire avec la personne chargée du digital à l'agence de Pornic. J'ai par la suite fait une saison au sein de la mairie de Pornic, plus précisément au service culture qui s'occupe de l'organisation et de la mise en place de gros concerts pendant l'été, ce qui m'a permis de rencontrer quelques artistes comme Ben l'Oncle Soul ou Elephantz ainsi que développer des compétences dans la mise en place de matériels son et lumière. Depuis fin août, je suis en alternance en communication initialement chez le groupe Gendry à Craon puis arrivé début novembre à la gendarmerie en tant qu'adjoint à la communication en alternance et en même temps en formation au sein de l'ESPL d'Angers.</p>
+            <ul>
+                <li>Baccalauréat Économique et Social option mathématiques obtenu avec mention bien</li>
+                <li>2 années de Licence de psychologie (arrêtées car ne correspondant pas à mes attentes)</li>
+                <li>Service civique de 8 mois (01/11/2022 à 26/06/2023) au sein de l'agence Pôle Emploi de Pornic (44210)
+                    <ul>
+                        <li>Réalisation d'affiches pour la communication interne</li>
+                        <li>Aide à la mise en place de salons de l'emploi</li>
+                        <li>Co-animation d'un webinaire avec le chargé du digital de l'agence</li>
+                    </ul>
+                </li>
+                <li>Saison au service culture de la mairie de Pornic
+                    <ul>
+                        <li>Organisation et mise en place de gros concerts pendant l'été</li>
+                        <li>Rencontres avec des artistes comme Ben l'Oncle Soul ou Elephantz</li>
+                        <li>Développement de compétences dans la mise en place de matériels son et lumière</li>
+                    </ul>
+                </li>
+                <li>Alternance en communication
+                    <ul>
+                        <li>Initialement chez le groupe Gendry à Craon</li>
+                        <li>Depuis début novembre au groupement de gendarmerie de la Mayenne à Laval</li>
+                        <li>Formation au sein de l'ESPL d'Angers</li>
+                    </ul>
+                </li>
+            </ul>
+        </section>
+        <section>
+            <h2>Compétences</h2>
+            <p>Je maîtrise plusieurs outils et technologies :</p>
+            <ul>
+                <li>Suite Office (bien) <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f2/Microsoft_Office_logo_%282013-2019%29.svg/1024px-Microsoft_Office_logo_%282013-2019%29.svg.png" alt="Office" style="height: 20px;"></li>
+                <li>Suite Adobe (assez bien) :
+                    <ul>
+                        <li>Photoshop <img src="https://upload.wikimedia.org/wikipedia/commons/a/af/Adobe_Photoshop_CC_icon.svg" alt="Photoshop" style="height: 20px;"></li>
+                        <li>InDesign <img src="https://upload.wikimedia.org/wikipedia/commons/4/48/Adobe_InDesign_CC_icon.svg" alt="InDesign" style="height: 20px;"></li>
+                        <li>Illustrator <img src="https://upload.wikimedia.org/wikipedia/commons/f/fb/Adobe_Illustrator_CC_icon.svg" alt="Illustrator" style="height: 20px;"></li>
+                    </ul>
+                </li>
+                <li>ChatGPT (bien) <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/04/ChatGPT_logo.svg/2048px-ChatGPT_logo.svg.png" alt="ChatGPT" style="height: 20px;"></li>
+                <li>Blender (débutant) <img src="https://upload.wikimedia.org/wikipedia/commons/0/0c/Blender_logo_no_text.svg" alt="Blender" style="height: 20px;"></li>
+                <li>3D Vista (très bien) <img src="https://upload.wikimedia.org/wikipedia/commons/8/82/3DVista_logo.png" alt="3D Vista" style="height: 20px;"></li>
+                <li>Canva (très bien) <img src="https://upload.wikimedia.org/wikipedia/commons/3/3c/Canva_Logo.png" alt="Canva" style="height: 20px;"></li>
+                <li>Capcut (très bien) <img src="https://upload.wikimedia.org/wikipedia/commons/4/4b/CapCut_Logo.png" alt="Capcut" style="height: 20px;"></li>
+            </ul>
         </section>
     </main>
     <footer>
