--- a/about.html
+++ b/about.html
@@ -35,21 +35,24 @@
             <ul>
                 <li>Baccalauréat Économique et Social option mathématiques obtenu avec mention bien</li>
                 <li>2 années de Licence de psychologie (arrêtées car ne correspondant pas à mes attentes)</li>
-                <li>Service civique de 8 mois (01/11/2022 à 26/06/2023) au sein de l'agence Pôle Emploi de Pornic (44210)
+                <li>
+                    Service civique de 8 mois (01/11/2022 à 26/06/2023) au sein de l'agence Pôle Emploi de Pornic (44210)
                     <ul>
                         <li>Réalisation d'affiches pour la communication interne</li>
                         <li>Aide à la mise en place de salons de l'emploi</li>
                         <li>Co-animation d'un webinaire avec le chargé du digital de l'agence</li>
                     </ul>
                 </li>
-                <li>Saison au service culture de la mairie de Pornic
+                <li>
+                    Saison au service culture de la mairie de Pornic
                     <ul>
                         <li>Organisation et mise en place de gros concerts pendant l'été</li>
                         <li>Rencontres avec des artistes comme Ben l'Oncle Soul ou Elephantz</li>
                         <li>Développement de compétences dans la mise en place de matériels son et lumière</li>
                     </ul>
                 </li>
-                <li>Alternance en communication
+                <li>
+                    Alternance en communication
                     <ul>
                         <li>Initialement chez le groupe Gendry à Craon</li>
                         <li>Depuis début novembre au groupement de gendarmerie de la Mayenne à Laval</li>
