--- a/index.html
+++ b/index.html
@@ -26,9 +26,30 @@
             <h2>Présentation</h2>
             <p>Je suis Killian GOILARD, un passionné de nouvelles technologies et de communication. Actuellement en fin de première année de BTS Communication, je suis en alternance au sein du groupement de gendarmerie de la Mayenne à Laval.</p>
         </section>
+        <section>
+            <h2>Objectifs du Portfolio</h2>
+            <p>Ce portfolio vise à montrer certaines tâches réalisées ainsi que renseigner sur ma personne, mes compétences et mon histoire. C'est aussi un moyen de montrer qu'on peut faire un site assez facilement avec ChatGPT et GitHub.</p>
+        </section>
+        <section>
+            <h2>Réalisations notables</h2>
+            <p>Je suis particulièrement fier de la visite virtuelle de la gendarmerie car c'est une première en France. Cela relie deux domaines qui me passionnent : la gendarmerie et la réalité virtuelle. Je suis aussi très fier du webinaire car c'était la première fois que je parlais à un public aussi large en direct sur des sujets que je maîtrisais.</p>
+        </section>
+        <section>
+            <h2>Projets futurs
+            <p>Pour ma future alternance, j'aimerais travailler sur des projets de communication plus précis. Dans la gendarmerie, je suis assez limité par l'institution car on ne peut pas communiquer sur tout n'importe comment. J'aimerais que l'alternance m'apporte de réelles compétences pour réussir dans mon futur bachelor.</p>
+        </section>
+        <section>
+            <h2>Philosophie de travail</h2>
+            <p>J'ai besoin d'une bonne ambiance. L'union fait la force et je suis persuadé qu'un environnement de travail sain est propice à la productivité. On peut s'amuser tout en travaillant, et j'ai besoin d'aller au travail et de m'amuser dans ce que je fais. J'ai aussi besoin de nouveauté, je suis en quête d'apprendre plein de choses.</p>
+        </section>
+        <section>
+            <h2>Technologies utilisées</h2>
+            <p>Ce site a été réalisé grâce à du code HTML et JavaScript généré par ChatGPT et des prompts réalisés par moi.</p>
+        </section>
     </main>
     <footer>
         <p>&copy; 2024 Killian GOILARD</p>
     </footer>
 </body>
 </html>
+```
