--- a/about.html
+++ b/about.html
@@ -41,14 +41,24 @@
                         <li>Réalisation d'affiches pour la communication interne</li>
                         <li>Aide à la mise en place de salons de l'emploi</li>
                         <li>Co-animation d'un webinaire avec le chargé du digital de l'agence</li>
+                        <li>Défis majeurs : Fracture numérique des demandeurs d'emploi et aide aux réfugiés ukrainiens, développant ainsi mon empathie et mon anglais</li>
                     </ul>
                 </li>
                 <li>
                     Saison au service culture de la mairie de Pornic
                     <ul>
                         <li>Organisation et mise en place de gros concerts pendant l'été</li>
-                        <li>Rencontres avec des artistes comme Ben l'Oncle Soul ou Elephantz</li>
+                        <li>Rencontres avec des artistes comme Ben l'Oncle Soul ou <a href="https://www.youtube.com/results?search_query=Elephanz" target="_blank">Elephanz</a></li>
                         <li>Développement de compétences dans la mise en place de matériels son et lumière</li>
+                        <li>Une journée typique : 
+                            <ul>
+                                <li>Le matin : Installation de la scène sur la plage</li>
+                                <li>Pause déjeuner avec un sandwich sur le sable avec les collègues</li>
+                                <li>L'après-midi : Accueil des artistes comme le groupe Elephanz, serrage de main, présentation, anecdotes, partage de collation et répétitions</li>
+                                <li>Le soir : Concert avec plus de 1000 personnes présentes sur la plage, mélange de sensations avec du son, de la danse et de la lumière</li>
+                                <li>Fin de concert : Partage avec les fans, débrief avec les artistes, démontage et retour chez soi avec des papillons dans le ventre, difficile de dormir avec la pression qui redescend</li>
+                            </ul>
+                        </li>
                     </ul>
                 </li>
                 <li>
@@ -65,7 +75,7 @@
             <h2>Compétences</h2>
             <p>Je maîtrise plusieurs outils et technologies :</p>
             <ul>
-                <li>Suite Office (bien) <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f2/Microsoft_Office_logo_%282013-2019%29.svg/1024px-Microsoft_Office_logo_%282013-2019%29.svg.png" alt="Office" style="height: 20px;"></li>
+                <li>Suite Office (bien)</li>
                 <li>Suite Adobe (assez bien) :
                     <ul>
                         <li>Photoshop <img src="https://upload.wikimedia.org/wikipedia/commons/a/af/Adobe_Photoshop_CC_icon.svg" alt="Photoshop" style="height: 20px;"></li>
@@ -75,9 +85,9 @@
                 </li>
                 <li>ChatGPT (bien) <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/04/ChatGPT_logo.svg/2048px-ChatGPT_logo.svg.png" alt="ChatGPT" style="height: 20px;"></li>
                 <li>Blender (débutant) <img src="https://upload.wikimedia.org/wikipedia/commons/0/0c/Blender_logo_no_text.svg" alt="Blender" style="height: 20px;"></li>
-                <li>3D Vista (très bien) <img src="https://upload.wikimedia.org/wikipedia/commons/8/82/3DVista_logo.png" alt="3D Vista" style="height: 20px;"></li>
-                <li>Canva (très bien) <img src="https://upload.wikimedia.org/wikipedia/commons/3/3c/Canva_Logo.png" alt="Canva" style="height: 20px;"></li>
-                <li>Capcut (très bien) <img src="https://upload.wikimedia.org/wikipedia/commons/4/4b/CapCut_Logo.png" alt="Capcut" style="height: 20px;"></li>
+                <li>3D Vista (très bien)</li>
+                <li>Canva (très bien)</li>
+                <li>Capcut (très bien)</li>
             </ul>
         </section>
     </main>
