--- a/about.html
+++ b/about.html
@@ -23,16 +23,15 @@
     <main>
         <section>
             <h2>Présentation</h2>
-            <p>Je suis Killian GOILARD, né le 15 novembre 2001 en Loire-Atlantique à Saint Herblain. Actuellement en fin de première année de BTS Communication (je passe en deuxième année) et en alternance au sein du groupement de gendarmerie de la Mayenne à Laval pour toute la durée de mon BTS. Je cherche à changer d'alternance pour ma deuxième année de BTS communication dans une entreprise où je pourrai acquérir plus de compétences dans le domaine de la communication, et pourquoi pas dans le domaine de l'intelligence artificielle, de la réalité mixte ou autres.</p>
+            <p style="text-align: justify;">Je suis Killian GOILARD, né le 15 novembre 2001 en Loire-Atlantique à Saint Herblain. Actuellement en fin de première année de BTS Communication (je passe en deuxième année) et en alternance au sein du groupement de gendarmerie de la Mayenne à Laval pour toute la durée de mon BTS. Je cherche à changer d'alternance pour ma deuxième année de BTS communication dans une entreprise où je pourrai acquérir plus de compétences dans le domaine de la communication, et pourquoi pas dans le domaine de l'intelligence artificielle, de la réalité mixte ou autres.</p>
         </section>
         <section>
             <h2>Mes intérêts et passions</h2>
-            <p>Je suis une personne très sérieuse qui adore découvrir de nouvelles choses notamment dans le domaine des nouvelles technologies comme l'intelligence artificielle ou la réalité mixte. J'ai longtemps voulu devenir militaire ou plus précisément gendarme (ma soeur est gendarme) cependant un Keratocone à l'oeil droit m'en empêche et j'ai donc dû trouver un autre domaine. C'est ainsi que je suis rentré en BTS Communication afin d'ensuite faire un Bachelor en Communication et Stratégie digital avec une spécialisation en Communication et nouvelles réalités, pour proposer des plans d’actions de communication à la pointe des technologies (intelligence artificielle, Web3.0 et réalité mixte).</p>
-            <p>Mon but serait d'ouvrir une agence de communication événementielle permettant de créer des événements comme des mariages, séminaires et autres, mais les clients pourraient prévisualiser leurs produits (salle ou autres) en réalité augmentée grâce à un casque VR. En persévérant, on arrive à tout.</p>
+            <p style="text-align: justify;">Je suis une personne très sérieuse qui adore découvrir de nouvelles choses notamment dans le domaine des nouvelles technologies comme l'intelligence artificielle ou la réalité mixte. J'ai longtemps voulu devenir militaire ou plus précisément gendarme (ma soeur est gendarme) cependant un Keratocone à l'oeil droit m'en empêche et j'ai donc dû trouver un autre domaine. C'est ainsi que je suis rentré en BTS Communication afin d'ensuite faire un Bachelor en Communication et Stratégie digital avec une spécialisation en Communication et nouvelles réalités, pour proposer des plans d’actions de communication à la pointe des technologies (intelligence artificielle, Web3.0 et réalité mixte). Mon but serait d'ouvrir une agence de communication événementielle permettant de créer des événements comme des mariages, séminaires et autres, mais les clients pourraient prévisualiser leurs produits (salle ou autres) en réalité augmentée grâce à un casque VR. En persévérant, on arrive à tout.</p>
         </section>
         <section>
             <h2>Parcours académique</h2>
-            <ul>
+            <ul style="text-align: justify;">
                 <li>Baccalauréat Économique et Social option mathématiques obtenu avec mention bien</li>
                 <li>2 années de Licence de psychologie (arrêtées car ne correspondant pas à mes attentes)</li>
                 <li>
@@ -73,7 +72,7 @@
         </section>
         <section>
             <h2>Compétences</h2>
-            <p>Je maîtrise plusieurs outils et technologies :</p>
+            <p style="text-align: justify;">Je maîtrise plusieurs outils et technologies :</p>
             <ul>
                 <li>Suite Office (bien)</li>
                 <li>Suite Adobe (assez bien) :
