--- a/about.html
+++ b/about.html
@@ -47,7 +47,7 @@
                     Saison au service culture de la mairie de Pornic
                     <ul>
                         <li>Organisation et mise en place de gros concerts pendant l'été</li>
-                        <li>Rencontres avec des artistes comme Ben l'Oncle Soul ou <a href="https://www.youtube.com/results?search_query=Elephanz" target="_blank">Elephanz</a></li>
+                        <li>Rencontres avec des artistes comme Ben l'Oncle Soul ou <a href="https://www.youtube.com/channel/UCYCEUWr_zWYFsKm_mTQkqig" target="_blank">Elephanz</a></li>
                         <li>Développement de compétences dans la mise en place de matériels son et lumière</li>
                         <li>Une journée typique : 
                             <ul>
