--- a/about.html
+++ b/about.html
@@ -32,22 +32,36 @@
         <section>
             <h2>Parcours académique</h2>
             <ul style="text-align: justify;">
-                <li>Baccalauréat Économique et Social option mathématiques obtenu avec mention bien</li>
-                <li>2 années de Licence de psychologie (arrêtées car ne correspondant pas à mes attentes)</li>
                 <li>
-                    Service civique de 8 mois (01/11/2022 à 26/06/2023) au sein de l'agence Pôle Emploi de Pornic (44210)
+                    <strong>Baccalauréat Économique et Social option mathématiques</strong> <br>
+                    Lycée du Pays de Retz, Pornic (44210) <br>
+                    Mention bien
+                </li>
+                <br>
+                <li>
+                    <strong>Licence de psychologie</strong> <br>
+                    UFR de psychologie, Nantes (44000) <br>
+                    2 années (arrêtées car je voulais devenir officier psychologie dans l'armée de terre. Cependant, après m'être renseigné auprès du CIRFA, on m'a dit que la psychologie dans l'armée de terre c'était surtout du recrutement et moi je voulais du terrain)
+                </li>
+                <br>
+                <li>
+                    <strong>Service civique : Animateur Numérique</strong> <br>
+                    Agence Pôle Emploi de Pornic (44210) <br>
+                    01/11/2022 à 26/06/2023
                     <ul>
+                        <li>Accompagnement des demandeurs d'emploi sur les bornes et facilitation numérique</li>
                         <li>Réalisation d'affiches pour la communication interne</li>
                         <li>Aide à la mise en place de salons de l'emploi</li>
                         <li>Co-animation d'un webinaire avec le chargé du digital de l'agence</li>
                         <li>Défis majeurs : Fracture numérique des demandeurs d'emploi et aide aux réfugiés ukrainiens, développant ainsi mon empathie et mon anglais</li>
                     </ul>
                 </li>
+                <br>
                 <li>
-                    Saison au service culture de la mairie de Pornic
+                    <strong>Saison au service culture de la mairie de Pornic</strong> <br>
                     <ul>
                         <li>Organisation et mise en place de gros concerts pendant l'été</li>
-                        <li>Rencontres avec des artistes comme Ben l'Oncle Soul ou <a href="https://www.youtube.com/channel/UCYCEUWr_zWYFsKm_mTQkqig" target="_blank">Elephanz</a></li>
+                        <li>Rencontres avec des artistes comme Ben l'Oncle Soul ou <a href="https://www.youtube.com/results?search_query=Elephanz" target="_blank">Elephanz</a></li>
                         <li>Développement de compétences dans la mise en place de matériels son et lumière</li>
                         <li>Une journée typique : 
                             <ul>
@@ -60,12 +74,14 @@
                         </li>
                     </ul>
                 </li>
+                <br>
                 <li>
-                    Alternance en communication
+                    <strong>Formation et alternance en communication</strong> <br>
+                    ESPL, Angers <br>
                     <ul>
-                        <li>Initialement chez le groupe Gendry à Craon</li>
-                        <li>Depuis début novembre au groupement de gendarmerie de la Mayenne à Laval</li>
                         <li>Formation au sein de l'ESPL d'Angers</li>
+                        <li>Alternance initialement chez le groupe Gendry à Craon</li>
+                        <li>Depuis début novembre au groupement de gendarmerie de la Mayenne à Laval</li>
                     </ul>
                 </li>
             </ul>
