--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <img src="Egide.png" alt="Logo" class="logo">
-        <h1>Bienvenue sur le portfolio de Killian GOILARD</h1>
+        <h1>Curriculum Vitae de Killian GOILARD</h1>
         <p>En persévérant on arrive à tout</p>
         <nav>
             <ul>
