--- a/index.html
+++ b/index.html
@@ -3,19 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio de Killian GOILARD</title>
+    <title>CV en ligne de Killian GOILARD</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
         <img src="Egide.png" alt="Logo" class="logo">
-        <h1>Curriculum Vitae de Killian GOILARD</h1>
+        <h1>Bienvenue sur le CV en ligne de Killian GOILARD</h1>
         <p>En persévérant on arrive à tout</p>
         <nav>
             <ul>
                 <li><a href="index.html">Accueil</a></li>
-                <li><a href="about.html">À propos</a></li>
+                <li><a href="about.html">Curriculum Vitae</a></li>
                 <li><a href="projects.html">Projets</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
@@ -23,8 +23,8 @@
     </header>
     <main>
         <section>
-            <h2>Objectifs du Portfolio</h2>
-            <p style="text-align: justify;">Ce portfolio vise à montrer certaines tâches réalisées ainsi que renseigner sur ma personne, mes compétences et mon histoire. C'est aussi un moyen de montrer qu'on peut faire un site assez facilement avec ChatGPT et GitHub.</p>
+            <h2>Objectifs de ce CV en ligne</h2>
+            <p style="text-align: justify;">Ce CV en ligne vise à montrer certaines tâches réalisées ainsi que renseigner sur ma personne, mes compétences et mon histoire. C'est aussi un moyen de montrer qu'on peut faire un site assez facilement avec ChatGPT et GitHub.</p>
         </section>
         <section>
             <h2>Réalisations notables</h2>
