--- a/about.html
+++ b/about.html
@@ -3,18 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>À propos de Killian GOILARD</title>
+    <title>Curriculum Vitae de Killian GOILARD</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
         <img src="Egide.png" alt="Logo" class="logo">
-        <h1>À propos</h1>
+        <h1>Killian GOILARD</h1>
+        <p>En persévérant on arrive à tout</p>
         <nav>
             <ul>
                 <li><a href="index.html">Accueil</a></li>
-                <li><a href="about.html">À propos</a></li>
+                <li><a href="about.html">Curriculum Vitae</a></li>
                 <li><a href="projects.html">Projets</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
@@ -82,6 +83,9 @@
                         <li>Formation au sein de l'ESPL d'Angers</li>
                         <li>Alternance initialement chez le groupe Gendry à Craon</li>
                         <li>Depuis début novembre au groupement de gendarmerie de la Mayenne à Laval</li>
+                        <li>Gestion et production de contenu pour les réseaux sociaux</li>
+                        <li>Mise en place d'une visite virtuelle du groupement</li>
+                        <li>Participation et médiatisation de forums et salons</li>
                     </ul>
                 </li>
             </ul>
