--- a/projects.html
+++ b/projects.html
@@ -30,7 +30,7 @@
             <article>
                 <h3>Visite virtuelle du groupement de gendarmerie de la Mayenne</h3>
                 <p>Un projet notable où j'ai développé mes compétences sur le logiciel 3D Vista ainsi que la modélisation 3D de matériels de la gendarmerie. J'ai aussi utilisé GitHub et ChatGPT pour intégrer la visite virtuelle, téléchargée localement sur mon ordinateur.</p>
-                <p>Vous pouvez voir la visite virtuelle en cliquant <a href="https://ggd53.github.io/Visite-virtuelle/" target="_blank">ici</a>.</p>
+                <p>Vous pouvez voir la visite virtuelle en cliquant <a href="https://ggd53.github.io/Visite-virtuelle-GGD53/" target="_blank">ici</a>.</p>
             </article>
             <article>
                 <h3>Logo “L’Égide”</h3>
