--- a/projects.html
+++ b/projects.html
@@ -3,20 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projets de Killian GOILARD</title>
+    <title>CV en ligne de Killian GOILARD</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
         <img src="Egide.png" alt="Logo" class="logo">
-        <h1>Mes Projets</h1>
+        <h1>Mes projets</h1>
+        <p>En persévérant on arrive à tout</p>
         <nav>
             <ul>
                 <li><a href="index.html">Accueil</a></li>
-                <li><a href="about.html">À propos</a></li>
+                <li><a href="about.html">Curriculum Vitae</a></li>
                 <li><a href="projects.html">Projets</a></li>
                 <li><a href="contact.html">Contact</a></li>
+
             </ul>
         </nav>
     </header>
