--- a/contact.html
+++ b/contact.html
@@ -15,13 +15,15 @@
 <body>
     <header>
         <img src="Egide.png" alt="Logo" class="logo">
-        <h1>Contact</h1>
+        <h1>Me contacter</h1>
+        <p>En persévérant on arrive à tout</p>
         <nav>
             <ul>
                 <li><a href="index.html">Accueil</a></li>
-                <li><a href="about.html">À propos</a></li>
+                <li><a href="about.html">Curriculum Vitae</a></li>
                 <li><a href="projects.html">Projets</a></li>
                 <li><a href="contact.html">Contact</a></li>
+
             </ul>
         </nav>
     </header>
